--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
+    "font-awesome": "^4.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.4.4",
     "react-icons": "^5.3.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "simple-icons": "^13.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
